# centralization-td

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
.agents/skills/benchmark-cases/: SKILL.md
.agents/skills/bow-spring-modeling/: SKILL.md
.agents/skills/numerical-verification/: SKILL.md
.agents/skills/paper-alignment-review/: SKILL.md
.agents/skills/physics-modeling/: SKILL.md
.agents/skills/repo-bootstrap/: SKILL.md
.agents/skills/reporting-docs/: SKILL.md
.agents/skills/torque-drag-coupling/: SKILL.md
.agents/skills/vector-frame-solver/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: README.md
benchmarks/cases/: eccentricity_breaks_symmetry.yaml  sensitivity_bows_4.yaml  sensitivity_bows_8.yaml  sensitivity_mu_high.yaml  sensitivity_mu_low.yaml  sensitivity_p_low.yaml  sensitivity_torque_feedback_low.yaml  sensitivity_torque_ratio_high.yaml
benchmarks/configs/centralizers/: none.yaml  single_bows4_explicit_k.yaml  single_k_low.yaml  single_p_low.yaml  single_reference.yaml  single_torque_feedback_high.yaml  single_torque_ratio_low.yaml
benchmarks/configs/strings/: short_string_mu_0p45_long.yaml
benchmarks/suites/: phase10_validation.yaml
centralization-td-master/: AGENTS.md  CHANGELOG.md  DECISIONS.md  pytest.ini
centralization-td-master/.devcontainer/: Dockerfile
centralization-td-master/benchmarks/: README.md
centralization-td-master/benchmarks/calibration/: force_deflection_pairs.yaml  nominal_force_points.yaml
centralization-td-master/benchmarks/cases/: centralizer_symmetric.yaml  deviated_moderate.yaml  sensitivity_clearance_high.yaml  sensitivity_clearance_low.yaml  sensitivity_k_high.yaml  sensitivity_k_low.yaml  sensitivity_p_high.yaml  sensitivity_torque_feedback_high.yaml  sensitivity_torque_ratio_low.yaml  vertical_simple.yaml
centralization-td-master/benchmarks/configs/centralizers/: single_bows8_explicit_k.yaml  single_clearance_high.yaml  single_clearance_low.yaml  single_k_high.yaml  single_p_high.yaml  single_torque_feedback_low.yaml  single_torque_ratio_high.yaml
centralization-td-master/benchmarks/configs/strings/: short_string_mu_0p15_long.yaml  short_string_mu_0p25.yaml
centralization-td-master/benchmarks/configs/wells/: deviated_high_curvature.yaml  deviated_moderate_short.yaml  vertical_short.yaml
centralization-td-master/benchmarks/suites/: phase10_validation.yaml
centralization-td-master/configs/centralizers/: example_centralizer.yaml
centralization-td-master/examples/: minimal_case.yaml
centralization-td-master/python/centraltd/: __init__.py  cli.py  frames.py  models.py  plotting.py  runner.py  torque_drag.py  torque_drag_body.py  torque_drag_centralizer.py
centralization-td-master/python/centraltd/io/: __init__.py
centralization-td-master/python/centraltd/physics/: beam_element.py  bow_spring.py  contact.py  fem.py  friction.py
centralization-td-master/tests/: test_beam_element.py  test_fem_forces.py  test_models.py  test_physics_properties.py
configs/centralizers/: example_centralizer.yaml
configs/strings/: example_string.yaml
configs/wells/: example_well.yaml
cpp/: AGENTS.md  CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/centraltd/: bow_spring_calibration.hpp  bow_spring_constitutive_model.hpp  bow_spring_geometry.hpp  bow_spring_resultants.hpp  centralizer.hpp  centralizer_support.hpp  contact_approximation.hpp  coupling_driver.hpp  discretization.hpp  global_assembly.hpp  global_solver.hpp  lateral_equilibrium.hpp  local_tangential_model.hpp  mechanical_solver.hpp  solver_stub.hpp  string_section.hpp  torque_drag.hpp  torque_drag_body.hpp  torque_drag_centralizer.hpp  torsional_reduced_model.hpp  trajectory_frame.hpp  types.hpp  vector_contact.hpp  vector_global_assembly.hpp  vector_global_solver.hpp  vector_lateral_equilibrium.hpp  version.hpp  well.hpp
cpp/src/: bow_spring_calibration.cpp  bow_spring_constitutive_model.cpp  bow_spring_geometry.cpp  bow_spring_resultants.cpp  centralizer.cpp  centralizer_support.cpp  contact_approximation.cpp  coupling_driver.cpp  discretization.cpp  global_assembly.cpp  global_solver.cpp  lateral_equilibrium.cpp  local_tangential_model.cpp  mechanical_solver.cpp  solver_stub.cpp  string_section.cpp  torque_drag.cpp  torque_drag_body.cpp  torque_drag_centralizer.cpp  torsional_reduced_model.cpp  trajectory_frame.cpp  vector_contact.cpp  vector_global_assembly.cpp  vector_global_solver.cpp  vector_lateral_equilibrium.cpp  version.cpp  well.cpp
cpp/tests/: test_smoke.cpp
docs/: PHYSICS_REFERENCE.md  roadmap.md
examples/: minimal_case.yaml
python/: README.md  pyproject.toml
python/centraltd/: __init__.py  benchmarking.py  bow_spring.py  calibration.py  cli.py  coupling.py  frames.py  io.py  local_tangential_model.py  mechanics.py  models.py  plotting.py  runner.py  torque_drag.py  torque_drag_body.py  torque_drag_centralizer.py  torsional_reduced_model.py
python/centraltd/io/: io.py
python/centraltd/physics/: bow_spring.py  constants.py  contact.py  fem.py
python/centraltd/solver/: calibration.py  coupling.py  mechanics.py
tests/: README.md  test_models.py  test_physics_properties.py  test_python_smoke.py
(+2 files in other folders)
