[build-system]
requires = [
  "pybind11>=2.13.6",
  "scikit-build-core>=0.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "centraltd"
version = "0.1.0"
description = "Python orchestration layer for centralization and torque & drag experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
centraltd = "centraltd.cli:main"

[tool.scikit-build]
cmake.source-dir = ".."
cmake.build-type = "Release"
wheel.packages = ["centraltd"]

