[build-system]
requires = [
  "setuptools>=69",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "centraltd"
version = "0.1.0"
description = "Python orchestration layer for centralization and torque & drag experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
centraltd = "centraltd.cli:main"

[tool.setuptools.packages.find]
where = ["."]

